--- a/bankers.html
+++ b/bankers.html
@@ -73,7 +73,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- Header Top End -->			
+			<!-- Header Top End -->
 			<div class="mnmenu-sec">
 				<div class="container">
 					<div class="row">
@@ -83,7 +83,7 @@
 									<a href="index.html"><img src="img/logo2.png" alt=""/></a>
 								</div>
 							</div>
-							<div class="col-md-9">		
+							<div class="col-md-9">
 								<div class="menu">
 									<nav id="main-menu" class="main-menu">
 										<ul>
@@ -91,40 +91,39 @@
 											<li class="active css-border"><a href="bankers.html">Bankers</a></li>
 											<li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
 												<ul>
-													<li><a href="service-1.html">Why Title Insurance?1</a></li>
-													<li><a href="service-2.html">Closing Process</a></li>
-													<li><a href="service-details-1.html">Closing Costs Explained</a></li>
-													<li><a href="service-details-2.html">Real Estate Resources</a></li>
-													<li><a href="service-details-1.html">What is ALTA?</a></li>
-													<li><a href="service-details-2.html">Test Your Knowledge</a></li>
-													<li><a href="service-details-1.html">Real Estate Glossary</a></li>
+													<li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
+													<li><a href="closing-process.html">Closing Process</a></li>
+													<li><a href="closing-cost-explained.html">Closing Costs Explained</a></li>
+													<li><a href="real-estate-resources.html">Real Estate Resources</a></li>
+													<li><a href="what-is-alta.html">What is ALTA?</a></li>
+													<li><a href="real-estate-glossary.html">Real Estate Glossary</a></li>
 												</ul>
 											</li>
 											<li class="css-border"><a href="contact.html">Contact us</a></li>
 										</ul>
 									</nav>
-									<div class="menu-icon">	
-										<div class="site-search">	
+									<div class="menu-icon">
+										<div class="site-search">
 											<i class="fa fa-search"></i>
 											<div class="search-forum">
 												<form action="#">
 													<input placeholder="Search For Site" type="text">
 													<input type="submit" value="Go"/>
-												</form>							
-											</div>							
+												</form>
+											</div>
 										</div>
-									</div>									
-								</div>						
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>	
+				</div>
 			</div>
 		</div>
 		<!-- Main Menu End -->
 	</header>
-	<!-- Header End -->	
-	
+	<!-- Header End -->
+
 	<!-- Page Heading Section Start -->	
 	<div class="pagehding-sec">
 		<div class="pagehding-overlay"></div>		
