--- a/closing-cost-explained.html
+++ b/closing-cost-explained.html
@@ -87,17 +87,16 @@
                             <div class="menu">
                                 <nav id="main-menu" class="main-menu">
                                     <ul>
-                                        <li class="active css-border"><a href="about.html">About us</a></li>
+                                        <li class="css-border"><a href="about.html">About us</a></li>
                                         <li class="css-border"><a href="bankers.html">Bankers</a></li>
                                         <li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
                                             <ul>
                                                 <li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
                                                 <li><a href="closing-process.html">Closing Process</a></li>
                                                 <li><a href="closing-cost-explained.html">Closing Costs Explained</a></li>
-                                                <li><a href="service-details-2.html">Real Estate Resources</a></li>
-                                                <li><a href="service-details-1.html">What is ALTA?</a></li>
-                                                <li><a href="service-details-2.html">Test Your Knowledge</a></li>
-                                                <li><a href="service-details-1.html">Real Estate Glossary</a></li>
+                                                <li><a href="real-estate-resources.html">Real Estate Resources</a></li>
+                                                <li><a href="what-is-alta.html">What is ALTA?</a></li>
+                                                <li><a href="real-estate-glossary.html">Real Estate Glossary</a></li>
                                             </ul>
                                         </li>
                                         <li class="css-border"><a href="contact.html">Contact us</a></li>
@@ -152,7 +151,7 @@
 		<div class="about-sec-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-7">
+				<div class="col-md-12">
 					<div class="about-desc">
 						<div class="sec-title">
 							<h1><span>Closing </span>Costs Explained</h1>
@@ -165,54 +164,83 @@
 							<p>
                                 All closing costs must be listed on your HUD-1 settlement form, a document that is required to be filled out prior to finalizing the purchase of your home.
 							</p>
-							<p><h4>What are My Closing Costs?</h4>
-                                In addition to the sales price of the home, there is a variety of costs associated with finalizing the transaction. Click on any of these links below for more information on these costs:
-							</p>
-							<p>
-								With such a thorough examination of records, any title problems usually can be found and cleared up prior to your purchase of the property. Once a title policy is issued,
-								if for some reason any claim which is covered under your title policy is ever filed against your property, the title company will pay the legal fee involved in defense of your
-								rights, as well as any covered loss arising from a valid claim. That protection, which is in effect as long as you or your heirs own the property, is yours for a one-time
-								premium paid at the time of purchase.
-							</p>
-							<p>
-								The fact that title companies work to eliminate risks before they develop makes the title insurance decidedly different from other types of insurance you may have purchased.
-								Most forms of insurance assume risks by providing financial protection through a pooling of risks for losses arising from an unforeseen event, say a fire, theft or accident.
-								The purpose of title insurance, on the other hand, is to eliminate risks and prevent losses caused by defects in title that happened in the past. Risks are examined and mitigated
-								before property changes hands.
-							</p>
-							<p>
-								This risk elimination has benefits to both you, the homebuyer, and the title company: it minimizes the chances adverse claims might be raised, and by so doing reduces the number
-								of claims that have to be defended or satisfied. This keeps costs down for the title company and your title premiums low.
-							</p>
-							<p>
-								Buying a home is a big step emotionally and financially. With title insurance, you are assured that any valid claim against your property will be borne by the title company
-								and that the odds of a claim being filed are slim indeed. Isn’t sleeping well at night, knowing your home is yours, reason enough for title insurance?
-							</p>
-							<p>
-							<h4>Who Pays the Premium for the Title Policy?</h4>
-								Settlement practices vary from locality to locality. The party that pays the title premium is a matter of local custom and practice and not set by law. Depending upon
-								the region, the premium for a title insurance policy can be paid by the buyer or the seller or split between both parties. In almost every county, the buyer pays the lender’s
-								policy premium. The parties are free to negotiate a different allocation of fees. Your escrow officer can advise you as to who normally pays the premium in your area.
-							</p>
-						</div>
+                            <hr>
+                                <div class="panel-group" id="accordionMenu" role="tablist" aria-multiselectable="true">
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading" role="tab" id="headingOne">
+                                            <h4 class="panel-title">
+                                                <a role="button" data-toggle="collapse" data-parent="#accordionMenu" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                                    Title Charges (Section C)
+                                                </a>
+                                            </h4>
+                                        </div>
+                                        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                                            <div class="panel-body">
+                                                <p>These fees cover the administrative costs of a title search, title examination, issuance of the title commitment/binder and final title insurance policy(ies.) Also included would be charges for conducting the closing/settlement/escrow. You are free to select the company to conduct your closing/settlement/escrow, and to shop for the best pricing. Be sure to visit the <a href="http://www.homeclosing101.org/shopping.cfm">Shopping for Title Insurance</a> section of this site.</p>
+                                                <ul>
+                                                    <li><strong>Settlement/Closing Fee</strong> -A fee must be paid to a settlement agent who has prepared documents, calculated figures, and oversees proper execution of closing documents. This fee is often split between buyer and seller but can be negotiated as part of the sales contract.</li>
+                                                    <li><strong>Abstract of Title, Search, Title Examination, Title Insurance Commitment or Binder</strong> &#8211; In order to ensure that there are no pre-existing problems with your property, a title insurance professional must perform a title search and produce documentation on the home&#8217;s title. In some places, one or more of these charges will appear separately on the HUD-1 and in other places they may be included within the title insurance premium. When a mortgage loan is involved, there may also be added charges for special endorsements that will accompany the lender&#8217;s title policy.</li>
+                                                    <li><strong>Document Preparation</strong> &#8211; As a title company, we are not lawyers and cannot prepare legal documents but we do work with several experiended real estate attorneys who can get the documents prepared efficiently and at reasonable rates.</li>
+                                                    <li><strong>Notary Fee</strong> &#8211; Because there are legal documents involved, a licensed notary is required to acknowledge the fact that the proper people signed these official documents in their presence. Notaries often charge a fee for their services.</li>
+                                                    <li><strong>Attorney fees</strong> &#8211; Both the homebuyer and the seller might have their own legal representation to prepare and record legal documents. Frequently, however, where an attorney is acting as a settlement agent, there may only be one involved in the closing. Who pays for those services is a matter of contract negotiation but is often handled like fees paid to any other settlement agent/title agent.</li>
+                                                    <li><strong>Title Insurance</strong> &#8211; There are two kinds of title insurance policies: Loan and Owner&#8217;s policies. The cost for the Loan Policy is based on the loan amount and the cost for the Owner&#8217;s Policy is based on the sales price of the home. Who pays these one-time fees at closing varies from state to state. Ask your settlement agent how it is handled in your area. In some circumstances, discounts may be available (such as a &#8220;reissue rate&#8221; or &#8220;reissue credit&#8221;) when the property has recently been insured by a title insurer. Be sure to ask if you are entitled to any discounts.You also have the option of purchasing a policy with expanded coverage. It&#8217;s called the Homeowner&#8217;s Policy and it covers more things than the Owner&#8217;s Policy. Ask your local title company for an explanation of the expanded Homeowner&#8217;s Policy so you can decide which policy is the best one for you.</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading" role="tab" id="headingTwo">
+                                            <h4 class="panel-title">
+                                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionMenu" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                    Taxes & Government Fees (Section E)
+                                                </a>
+                                            </h4>
+                                        </div>
+                                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                            <div class="panel-body">
+                                                <p>Buying a home is not only a big investment, it is also a matter of public record. The property information and the loan information are required to be filed at the county courthouse or other local government recording office.</p>
+                                                <ul>
+                                                    <li><strong>Recording Fees</strong> &#8211; The recording fee is paid to a government body which enters an official record of the change of ownership.</li>
+                                                    <li><strong>Transfer Taxes, Document or Transaction Stamps</strong> &#8211; These are government charges based on the amount of the mortgage and, often, also on the purchase price. Depending on your location, there could be a city, county or state tax involved, or some combination.</li>
+                                                </ul>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading" role="tab" id="headingThree">
+                                            <h4 class="panel-title">
+                                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionMenu" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                    Other Fees (Section H)
+                                                </a>
+                                            </h4>
+                                        </div>
+                                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                                            <div class="panel-body">
+                                                <ul>
+                                                    <li><strong>Survey Fee</strong> &#8211; Lenders and title insurers often require a surveyor to conduct a survey of your property to define the property size and boundaries and to see if any part of the building or other improvements are &#8220;encroaching&#8221; on a neighbor&#8217;s yard — or the other way around. They are also looking to see if there are any setback violations or other material matters that are considered problematic.</li>
+                                                    <li><strong>Inspection Fees</strong> &#8211; When homes are sold an inspection is often recommended and in some cases the contract may even be contingent upon an acceptable inspection report. This fee covers the cost of an inspector to check the dwelling for any structural problems or issues. Frequently, this is a sales contract term imposed by the homebuyer to obtain an accurate assessment of the condition of the property. The work is done prior to closing but the fee is often collected at closing. There are several inspections that a future homeowner might want to request and a lender might require. These could include pest inspections (termites and other wood-destroying organisms), lead paint inspections (for structures built before 1978), roof inspections, water/well certifications, structural or mechanical inspections, or additional specific inspections based on the property type and location.</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
 					</div>
 				</div>
-				<div class="col-md-5">
-					<div class="about-us-img">
-						<img src="img/usa-house2.jpg" alt=""/>
-					</div>
-				</div>
+
 			</div>
 		</div>
 	</div>
-	
+
+
 	<!-- Footer Section Start -->
 	<footer>	
 		<!-- Footer Top Section Start -->
 		<div class="footer-sec">
 			<div class="container">
 				<div class="row">				
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-6 col-sm-6">
 						<div class="footer-wedget-one">
 							<a href="index.html"><img src="img/logo.png" alt=""/></a>
 							<p>Lorem ipsum dolor sit amet, nulla fermentum, mollis ac lectus nulla, vel neque, risus non nunc duis lectus, ac id porttitor vulputate donec sed.</p>
