--- a/real-estate-resources.html
+++ b/real-estate-resources.html
@@ -131,7 +131,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="page-heading">
-						<h1>Closing Process
+						<h1>Solutions for your Success
                             <br>
                             Innovation | Motivation | Education
                         </h1>
@@ -151,105 +151,80 @@
 		<div class="about-sec-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-7">
 					<div class="about-desc">
 						<div class="sec-title">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-md-5 col-sm-6">
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">Interview Realtors</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">25%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-7 col-sm-6">
-                                        <p>Let’s start at the very beginning — what does “closing,” “settlement,” or “closing escrow” on your house mean?
-                                            Closing – or settlement as it is known in some parts of the country — is a term used for the point in time at which the title to
-                                            the property is transferred to the buyer and, generally, a mortgage (or “deed of trust”) is given by the buyer/borrower to the lender.
-                                        </p>
-                                        <p>
-                                            Buying a house is an exciting time and the more you know about the process, the more relaxed you’ll be going through it. Keep reading,
-                                            and we’ll walk you through what the closing process really means.
-                                        </p>
-                                        <p>
-                                            Some information about the costs associated with closing on your home should be provided to you before you put a contract on a house.
-                                            If you are obtaining a loan to purchase the property, your lender has three days from the time of the loan application to provide you
-                                            with a Good Faith Estimate of your loan costs so there are no surprises about costs. Within those three days, you should also receive
-                                            a copy of the booklet, “Buying Your Home,” which outlines the settlement process. If these two things do not occur, talk to your lender.
-                                        </p>
-                                        <p>
-                                            Once the seller accepts your sales contract, the countdown to closing begins. Timing is essential to make sure all the ingredients
-                                            for a successful closing are in place for your arrival. You can shop around to select a settlement agent to prepare the documents for
-                                            your closing, or you can rely on a recommendation from your real estate agent or lender. In some parts of the country, the settlement
-                                            agent is an attorney, title company, or escrow company. Once a settlement agent has been selected, he or she will handle the closing
-                                            process from there. If you have given the seller an earnest money deposit, the escrow agent, settlement agent, or real estate broker
-                                            (this varies based on where you live), will see that it is promptly deposited into an escrow account where the funds are held until the time of closing.
-                                        </p>
-                                        <p>
-                                            Next, the settlement agent will request preliminary title work. A title professional will search and examine the public records for
-                                            information related to your home’s title. This provides warnings of title flaws that must be dealt with before the property can change hands.
-                                            For instance, the previous owner may have failed to pay local or state taxes. Or there may be an outstanding mortgage or judgment on the property.
-                                            Title professionals work hard to see that such obligations are dealt with and resolve any issues they find well before you go to closing if possible.
-                                            If the sales contract calls for a prior mortgage to be paid off, the settlement agent will order payoff figures from the existing lender. If the buyer
-                                            is assuming the loan, the settlement agent handles that as well. He/she, if directed to do so, also may order property inspections and termite reports.
-                                            If it is customary in your area, the settlement agent may order a survey.
-                                        </p>
-                                        <p>
-                                            Finally, the settlement agent is ready to prepare the HUD-1 Settlement Statement. The HUD-1, as it is referred to, outlines all of the costs
-                                            for both the buyer and seller associated with the closing. You can download a copy of the HUD-1 form to see all of the items listed on the form.
-                                        </p>
-                                        <p>
-                                            On closing day, the property will be transferred from the seller to the buyer. In most parts of the country, you will sign a number of
-                                            documents that will be explained by your settlement agent. Check with your settlement agent for more details on how the closing is conducted
-                                            in your area. Once all of the signings is done, the house is yours! Congratulations on achieving the American Dream!
-                                        </p>
-                                        <p>
-                                            You should be generally aware that the behind-the-scenes process continues after the closing. The settlement agent still must forward payment
-                                            to any prior lender, pay all the other parties who performed services in connection with your closing, pay out any net funds to the seller,
-                                            and order a final search of the title to your new home before finally recording all the documents needed legally to complete your purchase.
-                                            But you don’t have to be involved in any of this. Your settlement agent takes care of these post-closing details!
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
+							<h1><span>Real </span>Estate Resources</h1>
+							<p>The good news about buying a house is that there are plenty of useful Web sites, in addition to Home Closing 101,
+								to educate you about real estate and help you better understand home buying, title insurance and the closing process. Below are a select few:
+							</p>
+							<p>
+                                <h3>Buying a Home</h3>
+                                <ul>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.hud.gov/buying">HUD, the Department of Housing &amp; Urban Development</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.fanniemae.com/homebuyers/homepath/index.jhtml;jsessionid=RBCZV2XQOVIXPJ2FQSISFGI?p=Homepath">Fannie Mae</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.freddiemac.com/corporate/buyown/english/preparing/right_for_you/">Freddie Mac</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.appraisalinstitute.org/resources/brochures.asp">Appraisal Institute</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.a-e-a.org/content.cfm?sectionid=8">American Escrow Association</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.realtor.org/home_buyers_and_sellers/index.html">National Association of Realtors</a></li>
+                                </ul>
+							</p>
+							<p>
+                                <h3>Know Your Options</h3>
+                                <p>Explore Fannie Mae’s WaysHome, an interactive video simulation to help you learn about the options for avoiding foreclosure.</p>
+                                <ul>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.flsvideo.com/assets/Ways-Home/">Click here</a> to watch the video</li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.flsvideo.com/knowyouroptions.com-ways-home-trailer">Click here</a> for information on how to embed the video on your website or share via social media</li>
+                                </ul>
+							</p>
+							<p>
+                                <h3>Navigating the Homebuying and Closing Process</h3>
+                                <p>The U.S. Department of Housing and Urban Development produced three how-to videos to help prospective homeowners find a home they can afford, shop for a mortgage they can sustain and what to expect when they go to closing.</p>
+                                <ul>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.youtube.com/HUDchannel#p/u/2/kTn6hSrEGZg">Shopping for your home</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.youtube.com/HUDchannel#p/u/3/RdwxqiVwsOA">Shopping for your loan</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.youtube.com/HUDchannel#p/u/4/8IQ7Bl0VGTs">Closing the deal</a></li>
+                                </ul>
+                            </p>
+							<p>
+                                <h3>Closing Costs</h3>
+                                <ul>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.homeclosing101.org/hud_1.pdf">The HUD-1 Settlement Form</a></li>
+                                </ul>
+							</p>
+							<p>
+                                <h3>Real Estate News</h3>
+                                <ul>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://realtytimes.com/rtcpages/ourstory.htm">Realty Times</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.inman.com/">Inman Real Estate News</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.alta.org/">ALTA News &amp; Information</a></li>
+                                </ul>
+							</p>
+							<p>
+                                <h3>Insurance</h3>
+                                <ul>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.naic.org/state_web_map.htm">National Association of Insurance Commissioners</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.iiaba.net/main/CB_Website/Affiliated/NationalAssociation/IIAA/01_ConsumerInformation/NAV_CIConsumerInformation?ContentPreference=NA&amp;ActiveState=0&amp;ActiveTab=NA&amp;ContentLevel1=CONSINFO">The Independent Insurance Agents of America</a></li>
+                                </ul>
+							</p>
+							<p>
+                                <h3>Celebrating Your New Home</h3>
+                                <ul>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://entertaining.about.com/cs/holidays/a/housewarming.htm">How To Host a Housewarming</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.evite.com/app/cms/ideas/housewarming">Housewarming Ideas</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.foodnetwork.com/food/et_pa_housewarming/0,1972,FOOD_9860,00.html">Housewarming Food Suggestions</a></li>
+                                    <li><span class="fa fa-home fa-1x"></span> <a href="http://www.evite.com/">How to Invite Friends and Neighbors</a></li>
+                                </ul>
+							</p>
+							<p>
+							<h4>
+							</p>
 						</div>
+					</div>
+				</div>
+				<div class="col-md-5">
+					<div class="about-us-img">
+						<img src="img/usa-house2.jpg" alt=""/>
 					</div>
 				</div>
 			</div>
