--- a/what-is-alta.html
+++ b/what-is-alta.html
@@ -131,7 +131,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="page-heading">
-						<h1>Closing Process
+						<h1>Solutions for your Success
                             <br>
                             Innovation | Motivation | Education
                         </h1>
@@ -151,105 +151,39 @@
 		<div class="about-sec-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-7">
 					<div class="about-desc">
 						<div class="sec-title">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-md-5 col-sm-6">
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">Interview Realtors</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">25%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                        <br>
-                                        <div class="progress yellow">
-                                            <span class="progress-left"><span class="progress-bar"></span></span>
-                                            <span class="progress-right"><span class="progress-bar"></span></span>
-                                            <div class="progress-value">75%</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-7 col-sm-6">
-                                        <p>Let’s start at the very beginning — what does “closing,” “settlement,” or “closing escrow” on your house mean?
-                                            Closing – or settlement as it is known in some parts of the country — is a term used for the point in time at which the title to
-                                            the property is transferred to the buyer and, generally, a mortgage (or “deed of trust”) is given by the buyer/borrower to the lender.
-                                        </p>
-                                        <p>
-                                            Buying a house is an exciting time and the more you know about the process, the more relaxed you’ll be going through it. Keep reading,
-                                            and we’ll walk you through what the closing process really means.
-                                        </p>
-                                        <p>
-                                            Some information about the costs associated with closing on your home should be provided to you before you put a contract on a house.
-                                            If you are obtaining a loan to purchase the property, your lender has three days from the time of the loan application to provide you
-                                            with a Good Faith Estimate of your loan costs so there are no surprises about costs. Within those three days, you should also receive
-                                            a copy of the booklet, “Buying Your Home,” which outlines the settlement process. If these two things do not occur, talk to your lender.
-                                        </p>
-                                        <p>
-                                            Once the seller accepts your sales contract, the countdown to closing begins. Timing is essential to make sure all the ingredients
-                                            for a successful closing are in place for your arrival. You can shop around to select a settlement agent to prepare the documents for
-                                            your closing, or you can rely on a recommendation from your real estate agent or lender. In some parts of the country, the settlement
-                                            agent is an attorney, title company, or escrow company. Once a settlement agent has been selected, he or she will handle the closing
-                                            process from there. If you have given the seller an earnest money deposit, the escrow agent, settlement agent, or real estate broker
-                                            (this varies based on where you live), will see that it is promptly deposited into an escrow account where the funds are held until the time of closing.
-                                        </p>
-                                        <p>
-                                            Next, the settlement agent will request preliminary title work. A title professional will search and examine the public records for
-                                            information related to your home’s title. This provides warnings of title flaws that must be dealt with before the property can change hands.
-                                            For instance, the previous owner may have failed to pay local or state taxes. Or there may be an outstanding mortgage or judgment on the property.
-                                            Title professionals work hard to see that such obligations are dealt with and resolve any issues they find well before you go to closing if possible.
-                                            If the sales contract calls for a prior mortgage to be paid off, the settlement agent will order payoff figures from the existing lender. If the buyer
-                                            is assuming the loan, the settlement agent handles that as well. He/she, if directed to do so, also may order property inspections and termite reports.
-                                            If it is customary in your area, the settlement agent may order a survey.
-                                        </p>
-                                        <p>
-                                            Finally, the settlement agent is ready to prepare the HUD-1 Settlement Statement. The HUD-1, as it is referred to, outlines all of the costs
-                                            for both the buyer and seller associated with the closing. You can download a copy of the HUD-1 form to see all of the items listed on the form.
-                                        </p>
-                                        <p>
-                                            On closing day, the property will be transferred from the seller to the buyer. In most parts of the country, you will sign a number of
-                                            documents that will be explained by your settlement agent. Check with your settlement agent for more details on how the closing is conducted
-                                            in your area. Once all of the signings is done, the house is yours! Congratulations on achieving the American Dream!
-                                        </p>
-                                        <p>
-                                            You should be generally aware that the behind-the-scenes process continues after the closing. The settlement agent still must forward payment
-                                            to any prior lender, pay all the other parties who performed services in connection with your closing, pay out any net funds to the seller,
-                                            and order a final search of the title to your new home before finally recording all the documents needed legally to complete your purchase.
-                                            But you don’t have to be involved in any of this. Your settlement agent takes care of these post-closing details!
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
+							<h1><span>What is </span>ALTA?</h1>
+							<p><b>The American Land Title Association (ALTA)</b>, founded in 1907, is the national trade association and voice of the abstract* and title insurance industry. <b>ALTA</b> members search,
+								review and insure land titles to protect home buyers and mortgage lenders who invest in real estate. <b>ALTA</b> is headquartered in Washington, DC.
+							</p>
+							<p>
+                                Members of the association are in business in most counties across the nation. Nearly all title insurance companies hold <b>ALTA</b> membership, in addition to abstracters* and title
+								agents. Nearly 4,000 title agents, abstracters, and title insurance companies are Active members, ranging from small, one-county operations, to large national title insurers.
+                                Associate members of <b>ALTA</b> may include attorneys, builders, developers, lenders, real estate brokers, surveyors, consultants, educational institutions, computer services firms,
+                                and related national trade associations.
+							</p>
+							<p>
+                                <h3>Protecting Homebuyers</h3>
+                                <b>ALTA</b> members advocate safe and efficient transfer of real estate and insist on high standards when searching land title records and preparing insurance documents. The industry
+                                seeks to eliminate the risk before insuring, which provides the insured with the best possible chance of avoiding land title problems. But, title difficulties can and do occur,
+                                and members offer both Owner’s and Lender’s title insurance policies as effective safeguards.
+							</p>
+							<p>
+                                Professionals in the real estate market, as well as the home buying public, benefit considerably from the commitment to excellence that is routine in the work of <b>ALTA</b> members.
+                                Involvement by a title company is often thought of as the catalyst that allows a real estate closing to proceed smoothly until completed.
+                            </p>
+							<p>
+                                Consumers are encouraged to <u><a href="http://www.homeclosing101.org/shopping.cfm">shop for a title company</a></u> (also called settlement company or attorney in some areas)
+                                to conduct the closing and issue you an Owner&#8217;s Policy of Title Insurance.
+							</p>
 						</div>
+					</div>
+				</div>
+				<div class="col-md-5">
+					<div class="about-us-img">
+						<img src="img/usa-house2.jpg" alt=""/>
 					</div>
 				</div>
 			</div>
