--- a/about.html
+++ b/about.html
@@ -48,11 +48,11 @@
 		<div id="preloader-status"></div>
 	</div>
 	<!-- Preloader End -->
-	<!-- Header Start -->
-	<header>
-		<!-- Main Menu Start -->
-		<div class="hd-style1">
-			<!-- Header Top Start -->
+    <!-- Header Start -->
+    <header>
+        <!-- Main Menu Start -->
+        <div class="hd-style1">
+            <!-- Header Top Start -->
             <div class="hd-sec">
                 <div class="container">
                     <div class="row">
@@ -73,17 +73,17 @@
                     </div>
                 </div>
             </div>
-			<!-- Header Top End -->			
-			<div class="mnmenu-sec">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12 nav-menu">
-							<div class="col-md-3">
-								<div class="logo">
-									<a href="index.html"><img src="img/logo2.png" alt=""/></a>
-								</div>
-							</div>
-							<div class="col-md-9">
+            <!-- Header Top End -->
+            <div class="mnmenu-sec">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 nav-menu">
+                            <div class="col-md-3">
+                                <div class="logo">
+                                    <a href="index.html"><img src="img/logo2.png" alt=""/></a>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
                                 <div class="menu">
                                     <nav id="main-menu" class="main-menu">
                                         <ul>
@@ -91,13 +91,12 @@
                                             <li class="css-border"><a href="bankers.html">Bankers</a></li>
                                             <li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
                                                 <ul>
-                                                    <li><a href="service-1.html">Why Title Insurance?1</a></li>
-                                                    <li><a href="service-2.html">Closing Process</a></li>
-                                                    <li><a href="service-details-1.html">Closing Costs Explained</a></li>
-                                                    <li><a href="service-details-2.html">Real Estate Resources</a></li>
-                                                    <li><a href="service-details-1.html">What is ALTA?</a></li>
-                                                    <li><a href="service-details-2.html">Test Your Knowledge</a></li>
-                                                    <li><a href="service-details-1.html">Real Estate Glossary</a></li>
+                                                    <li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
+                                                    <li><a href="closing-process.html">Closing Process</a></li>
+                                                    <li><a href="closing-cost-explained.html">Closing Costs Explained</a></li>
+                                                    <li><a href="real-estate-resources.html">Real Estate Resources</a></li>
+                                                    <li><a href="what-is-alta.html">What is ALTA?</a></li>
+                                                    <li><a href="real-estate-glossary.html">Real Estate Glossary</a></li>
                                                 </ul>
                                             </li>
                                             <li class="css-border"><a href="contact.html">Contact us</a></li>
@@ -115,17 +114,17 @@
                                         </div>
                                     </div>
                                 </div>
-							</div>
-						</div>
-					</div>
-				</div>	
-			</div>
-		</div>
-		<!-- Main Menu End -->
-	</header>
-	<!-- Header End -->	
-	
-	<!-- Page Heading Section Start -->	
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Main Menu End -->
+    </header>
+    <!-- Header End -->
+
+    <!-- Page Heading Section Start -->
 	<div class="pagehding-sec">
 		<div class="pagehding-overlay"></div>		
 		<div class="container">
