--- a/why-title-insurance.html
+++ b/why-title-insurance.html
@@ -87,17 +87,16 @@
                             <div class="menu">
                                 <nav id="main-menu" class="main-menu">
                                     <ul>
-                                        <li class="active css-border"><a href="about.html">About us</a></li>
+                                        <li class="css-border"><a href="about.html">About us</a></li>
                                         <li class="css-border"><a href="bankers.html">Bankers</a></li>
                                         <li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
                                             <ul>
                                                 <li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
                                                 <li><a href="closing-process.html">Closing Process</a></li>
                                                 <li><a href="closing-cost-explained.html">Closing Costs Explained</a></li>
-                                                <li><a href="service-details-2.html">Real Estate Resources</a></li>
-                                                <li><a href="service-details-1.html">What is ALTA?</a></li>
-                                                <li><a href="service-details-2.html">Test Your Knowledge</a></li>
-                                                <li><a href="service-details-1.html">Real Estate Glossary</a></li>
+                                                <li><a href="real-estate-resources.html">Real Estate Resources</a></li>
+                                                <li><a href="what-is-alta.html">What is ALTA?</a></li>
+                                                <li><a href="real-estate-glossary.html">Real Estate Glossary</a></li>
                                             </ul>
                                         </li>
                                         <li class="css-border"><a href="contact.html">Contact us</a></li>
@@ -203,28 +202,6 @@
 							</p>
 
 						</div>
-						<!--
-						<div class="about-countup">
-							<div class="counting-inner">
-								<div class="countup-text">
-									<h2 class="counter">250</h2>
-									<h4>Project Done</h4>
-								</div>
-							</div>
-							<div class="counting-inner">
-								<div class="countup-text">
-									<h2 class="counter">280</h2>
-									<h4>happy client</h4>
-								</div>
-							</div>
-							<div class="counting-inner">
-								<div class="countup-text">
-									<h2 class="counter">240</h2>
-									<h4>Our employees</h4>
-								</div>
-							</div>
-						</div>
-						-->
 					</div>
 				</div>
 				<div class="col-md-5">
